objects/Oppty_Cost_Comparison__c/Oppty_Cost_Comparison__c.object-meta.xml
<CustomObject>
    <label>Oppty Cost Comparison</label>
    <nameField>
        <displayFormat>OCC-{00000}</displayFormat>
        <label>Oppty Cost Comparison Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oppty Cost Comparisons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>