objects/Oppty_Cost_Comparison__c/fields/Feature_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Feature_Grouping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Feature Grouping</label>
    <referenceTo>Feature_Grouping__c</referenceTo>
    <relationshipLabel>Oppty Cost Comparisons</relationshipLabel>
    <relationshipName>Feature_Grouping</relationshipName>
    <type>Lookup</type>
</CustomField>