objects/Oppty_Cost_Comparison__c/fields/NRC__c.field-meta.xml
<CustomField>
    <fullName>NRC__c</fullName>
    <label>NRC</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>