objects/Oppty_Cost_Comparison__c/fields/Opportunity_Location__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Location__c</fullName>
    <label>Opportunity Location</label>
    <referenceTo>Opportunity_Location__c</referenceTo>
    <relationshipLabel>Oppty Cost Comparisons</relationshipLabel>
    <relationshipName>Oppty_Cost_Comparisons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>